<resources>
    <string name="app_name">Submission 3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Alarm</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="no_follower">Follower</string>
    <string name="no_following">Following</string>
    <string name="starred">Starred</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="github_avatar">Github Avatar</string>
    <string name="search">Cari</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="menu_1">Set Alarm</string>
    <string name="menu_2">Setting</string>

    <string name="follower_fragment">this is follower fragment</string>
    <string name="following_fragment">this is following fragment</string>
    <string name="username">Username</string>
    <string name="user_url">User URL</string>
    <string name="follower_url">Follower URL</string>
    <string name="following_url">Following URL</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="no_Internet">Could not retrieve data. Trying again…</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="screen1">Github Logo 1</string>
    <string name="login">login</string>
    <string name="dash">dash</string>
    <string name="location_icon">location_icon</string>
    <string name="company_icon">company icon</string>
    <string name="company">company</string>
    <string name="lblfollower">Follower: </string>
    <string name="lblfollowing">Following: </string>
    <string name="add_favorite_user">Add Favorite User</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="go_to_setting_alarm">Go to Setting Alarm</string>
    <string name="cancel_scheduled_alarm">Cancel scheduled Alarm</string>
    <string name="type_message_here">Type message here</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="time_icon">Time Icon</string>
    <string name="alarm_date">Alarm Date</string>
    <string name="date_icon">Date Icon</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="no_data_image">No Data image</string>
    <string name="no_favorite_users_found">No Favorite Users found</string>
    <string name="splash_home">Welcome to My Github App</string>
    <string name="splash_image">Splash Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>