<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu1"
            android:icon="@drawable/ic_alarm"
            android:title="@string/menu_1"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/menu2"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_2" />
    </group>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:queryHint="Masukkan kata"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
</menu>