<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userdetails.UserDetail">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/github_avatar"
        app:civ_border_color="@android:color/background_light"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_loginId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="end"
        android:text="@string/login"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@id/dashSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="4dp" />

    <TextView
        android:id="@+id/dashSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/dash"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/tv_loginId"
        app:layout_constraintTop_toBottomOf="@id/img_avatar" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="@string/name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="32dp" />

    <ImageView
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:src="@drawable/ic_location"
        app:layout_constraintEnd_toStartOf="@+id/tv_location"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        android:contentDescription="@string/location_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="1dp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/label_company"
        app:layout_constraintStart_toEndOf="@id/label_location"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/location"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="4dp" />

    <ImageView
        android:id="@+id/label_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:src="@drawable/ic_business"
        app:layout_constraintEnd_toStartOf="@+id/tv_company"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        android:contentDescription="@string/company_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="1dp" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="@string/company"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="4dp" />


    <TextView
        android:id="@+id/label_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:text="@string/lblfollower"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_follower"
        app:layout_constraintStart_toEndOf="@id/tv_follower"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="1dp" />

    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_follower"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/label_follower"
        app:layout_constraintEnd_toStartOf="@+id/label_following"
        app:layout_constraintStart_toEndOf="@+id/label_follower"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/label_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:text="@string/lblfollowing"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_follower"
        app:layout_constraintEnd_toStartOf="@id/tv_following"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="1dp" />


    <TextView
        android:id="@+id/tv_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/no_following"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_following"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="32dp" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_follower">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:tabBackground="@color/design_default_color_secondary_variant"
            app:tabGravity="fill"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/CustomTabStyle"
            app:tabTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="189dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>